@@ -1,5 +1,15 @@
 2004-06-06  Rodney Dawes  <dobey@novell.com>
 
+	* Makefile.am (DISTCLEANFILES, MAINTAINERCLEANFILES):
+	Add these variables so we can clean up stuff
+
+	* 16x16/stock/io/Makefile.am (install-data-hook):
+	* 24x24/stock/io/Makefile.am (install-data-hook):
+	Fix support for srcdir != builddir installs
+	(uninstall-hook): Add uninstall rules for distcheck to pass
+
+2004-06-06  Rodney Dawes  <dobey@novell.com>
+
 	* 16x16/stock/io/Makefile.am (install-data-local):
 	* 24x24/stock/io/Makefile.am (install-data-local):
 	Install stock_save-as.png as stock_save_as.png as well, to fix
